# user_service/docs/swagger.json
@@ -23,6 +23,13 @@
                         "schema": {
                             "$ref": "#/definitions/model.Token"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
